# computer_vision_abstra

./: .abstraignore  .gitignore  README.md  main.py  metric_calculation.py  metrics.py  mvp_.py  position_correction.py  pyproject.toml  requirements.txt  script_docvision.py
.abstra/: credentials
.abstra/config_file_backups/: abstra_20250115190735.json.backup  abstra_20250205154758.json.backup
data/CNH_Aberta/: 00000000_gt_ocr.txt  00000003_gt_ocr.txt  00000004_gt_ocr.txt  00000005_gt_ocr.txt  00000006_gt_ocr.txt  00000007_gt_ocr.txt  00000008_gt_ocr.txt  00000009_gt_ocr.txt  00000012_gt_ocr.txt  00000016_gt_ocr.txt  00000019_gt_ocr.txt  00000022_gt_ocr.txt  00000023_gt_ocr.txt  00000028_gt_ocr.txt  00000029_gt_ocr.txt  00000030_gt_ocr.txt  00000033_gt_ocr.txt
data/RG_Aberto/: 00018411_gt_ocr.txt  00018414_gt_ocr.txt  00018415_gt_ocr.txt  00018418_gt_ocr.txt  00018419_gt_ocr.txt  00018422_gt_ocr.txt  00018423_gt_ocr.txt  00018424_gt_ocr.txt  00018426_gt_ocr.txt  00018427_gt_ocr.txt  00018428_gt_ocr.txt  00018429_gt_ocr.txt  00018431_gt_ocr.txt  00018432_gt_ocr.txt  00018435_gt_ocr.txt  00018436_gt_ocr.txt  00018437_gt_ocr.txt  00018438_gt_ocr.txt  00018440_gt_ocr.txt  00018442_gt_ocr.txt  00018443_gt_ocr.txt  00018444_gt_ocr.txt  00018445_gt_ocr.txt  00018446_gt_ocr.txt
doc_vision/: google_vision.py  process_document.py  utils.py
results/: result_2025-01-13_17-24-08.json
scr/: decorators.py  process_document.py
src/: google_vision.py  main.py  process_document.py
vision_api_project/: decorators.py  process_document.py
(+238 files in other folders)
