[project]
name = "vision-api-project"
version = "0.1.0"
description = ""
authors = [
    {name = "victdreis",email = "victoria.dias.reiss@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-cloud-vision (>=3.9.0,<4.0.0)",
    "prettytable (>=3.12.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
