[tool.poetry]
name = "vision-api-project"
version = "0.1.0"
description = "A project to process Brazilian documents using Google Vision API."
authors = ["Seu Nome <seuemail@exemplo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
abstra = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
